--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		g.onload=function(){
 			window.chatwootSDK.run({
 				websiteToken: 'cVSrr7ek5rJ3yP2gErG3YFxM',
-				baseUrl: BASE_URL
+				baseUrl: https://sathyasri1.github.io/AWSWEB/
 			})
 		}
 	})(document,"script");
